--- a/alunissagem.html
+++ b/alunissagem.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <canvas id="jogo" width="800" height="600"></canvas>
-    <script src="jogo.js">
-    </script>
-
+    <script src="jogo.js"></script>
+    
 </body>
 </html>
